// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MDX COMPONENTS > renders Video wrapper correctly 1`] = `
<DocumentFragment>
  <figure
    class="mx-auto my-10 max-w-wide"
    data-figure-kind="video"
  >
    <div
      class="border border-rule rounded-md overflow-hidden bg-bg-soft"
    >
      <video
        class="block w-full h-auto"
        controls=""
        src="/clip.mp4"
      >
        <track
          kind="captions"
        />
      </video>
    </div>
  </figure>
</DocumentFragment>
`;

exports[`MDX COMPONENTS > renders a correctly 1`] = `
<DocumentFragment>
  <a
    class="underline font-bold scroll-my-14 dark:text-yellow-400 dark:hover:text-yellow-600 text-purple-600 hover:text-purple-800 duration-200"
    href="https://example.com"
  >
    Link
  </a>
</DocumentFragment>
`;

exports[`MDX COMPONENTS > renders blockquote correctly 1`] = `
<DocumentFragment>
  <div
    class="mx-auto max-w-prose my-8"
  >
    <blockquote
      class="border-l-2 border-accent pl-6 py-2 font-serif italic text-xl leading-snug text-text-mute"
    >
      Blockquote
    </blockquote>
  </div>
</DocumentFragment>
`;

exports[`MDX COMPONENTS > renders code correctly 1`] = `
<DocumentFragment>
  <code
    class="dark:bg-gray-800 text-sm p-1 rounded font-mono bg-gray-400 dark:text-white"
  >
    Strong
  </code>
</DocumentFragment>
`;

exports[`MDX COMPONENTS > renders headings correctly 1`] = `
<DocumentFragment>
  <h1
    class="text-5xl my-8"
    style="scroll-margin-top: 50px;"
  >
    Heading 1
  </h1>
  <h2
    class="group relative font-serif font-semibold text-h2 text-text mt-12 mb-4"
    style="scroll-margin-top: 50px;"
  >
    Heading 2
  </h2>
  <h3
    class="group relative font-serif font-semibold text-h3 text-text mt-8 mb-3"
    style="scroll-margin-top: 50px;"
  >
    Heading 3
  </h3>
  <h4
    class="text-xl my-8"
    style="scroll-margin-top: 50px;"
  >
    Heading 4
  </h4>
  <h5
    class="text-lg my-8"
    style="scroll-margin-top: 50px;"
  >
    Heading 5
  </h5>
  <h6
    class="text-base my-8"
    style="scroll-margin-top: 50px;"
  >
    Heading 6
  </h6>
</DocumentFragment>
`;

exports[`MDX COMPONENTS > renders hr correctly 1`] = `
<DocumentFragment>
  <hr
    class="my-6 border-2 mx-8"
  />
</DocumentFragment>
`;

exports[`MDX COMPONENTS > renders img through MDX mapping 1`] = `
<DocumentFragment>
  <figure
    class="mx-auto my-10 max-w-wide"
    data-figure-kind="image"
  >
    <div
      class="border border-rule rounded-md overflow-hidden bg-bg-soft"
    >
      <div
        class="bg-bg-deep"
      >
        <img
          alt="Caption"
          height="300"
          sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
          src="/pic.png?width=400&height=300"
          style="height: auto;"
          width="400"
        />
      </div>
    </div>
    <figcaption
      class="mt-3 font-mono text-meta text-text-soft tracking-wide"
    >
      <span>
        <span
          class="text-accent mr-2"
        >
          FIG. 00
        </span>
        Caption
      </span>
    </figcaption>
  </figure>
</DocumentFragment>
`;

exports[`MDX COMPONENTS > renders li correctly 1`] = `
<DocumentFragment>
  <li
    class="list-item"
  >
    List Item
  </li>
</DocumentFragment>
`;

exports[`MDX COMPONENTS > renders nested list structure 1`] = `
<DocumentFragment>
  <ul
    class="list-inside"
    id="topics"
  >
    <li
      class="list-item"
    >
      Alpha
    </li>
    <li
      class="list-item"
    >
      Beta
    </li>
  </ul>
</DocumentFragment>
`;

exports[`MDX COMPONENTS > renders ol correctly 1`] = `
<DocumentFragment>
  <ol
    class="list-decimal list-outside px-12"
  >
    Ordered List
  </ol>
</DocumentFragment>
`;

exports[`MDX COMPONENTS > renders paragraphs correctly 1`] = `
<DocumentFragment>
  <p
    class="my-3"
  >
    Paragraph
  </p>
</DocumentFragment>
`;

exports[`MDX COMPONENTS > renders sup correctly 1`] = `
<DocumentFragment>
  <sup
    style="scroll-margin-top: 50px;"
  >
    2
  </sup>
</DocumentFragment>
`;

exports[`MDX COMPONENTS > renders ul correctly 1`] = `
<DocumentFragment>
  <ul
    class="list-inside"
  >
    Unordered List
  </ul>
</DocumentFragment>
`;
